Revision history for Music-ToRoman

{{$NEXT}}

0.1800 2020-12-20 12:06:59
    - Make ->get_scale_mode a public method.
    - Improve documentation.

0.1703 2019-09-10 10:14:06
    - Fix a number of notes to romans by reordering enharmonic computation.

0.1702 2019-09-09 18:09:25
    - Convert bI to vii and bIV to iii.

0.1701 2019-09-09 14:57:50
    - Adjusted certain enharmonic sensing logic.
    - Add tests!

0.1700 2019-09-08 00:46:29
    - Look for enharmonic notes who's counterpart is not found in the scale.
    - Add an iterative test of the whole note modes.

0.1600 2019-09-06 10:29:40
    - Improve documentation.
    - Make double-flatted chord parsing work for certain cases.

0.1500 2019-09-05 19:46:15
    - Improve documentation.
    - Handle the half-diminished chord correctly.

0.1401 2019-09-05 19:04:57
    - Improve and correct documentation.

0.1400 2019-09-05 18:42:18
    - Improve documentation.
    - Fix verbose output.
    - Add test cases and remove skipping.
    - Clean-up code:
        * Move ugly code assignment to a new ->_get_scale_mode method.
        * Turn the "#X" to "bY" handling into the _up_to_flat() function.
        * Handle double sharps when figuring out flatted note equivalents.
        * Remove all double flat handling.

0.1300 2019-09-05 11:46:25
    - Improve documentation!
    - Support △ (maj) and ø (diminished) in chord names.

0.1200 2019-09-05 00:45:23
    - A chord named with a "-" means "minor."
    - A chord named "maj" is not minor.
    - Improve verbose output.
    - Add test cases.
    - Improve documentation.

0.1106 2019-09-03 10:52:11
    - Improve documentation.

0.1105 2019-09-03 09:05:12
    - Improve documentation ever so slightly.

0.1104 2019-09-02 22:06:41
    - Clean-up code.
    - Improve documentation.

0.1103 2019-09-02 21:43:06
    - Improve documentation.
    - Add test cases.

0.1102 2019-09-02 20:21:58
    - Clean-up code.

0.1101 2019-09-02 19:17:50
    - Improve documentation.
