@@ -1,6 +1,7 @@
 Revision history for Music-ToRoman
 
 {{$NEXT}}
+    - Add the ->get_scale_chords convenience method.
 
 0.1800 2020-12-20 12:06:59
     - Make ->get_scale_mode a public method.
